--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -170,7 +170,7 @@
 
                         <p:column headerText = "Delete Transportation Asset">
                             <p:commandButton action="#{TTassetViewEditManagedBean.deleteTAsset(tAsset)}" update="tAssetData" value="Delete">
-                                <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this Transportation Asset?" icon="ui-icon-alert" />
+                                <p:confirm header="Confirm Arrival" message="Are you sure that you want to delete this Transportation Asset?" icon="ui-icon-alert" />
                             </p:commandButton> 
                             <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
                                 <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
